agregado un boton

--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -4,9 +4,9 @@
   <div class="ion-padding">
     <ion-calendar
       [(ngModel)]="date"
-      routerLink="/date-time"
       [type]="type"
       [format]="'YYYY-MM-DD'">
     </ion-calendar>
   </div>
+  <ion-button routerLink="/date-time" class="boton">Falta justificada</ion-button>
 </ion-content>
