--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content >
   
     <img src="assets/img/fichasionic.png" class="center" alt="fichasionic"/> 
     <img src="assets/img/crearfichasionic.png" class="center" alt="crearfichasionic"/>
