--- a/src/app/pages/lists/lists.page.html
+++ b/src/app/pages/lists/lists.page.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>lists</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="Lists"></app-header>
 
 <ion-content>
 
+</ion-content>
+
+<ion-content class="ion-text-end">
+  <ion-button  shape="round" color="primary" routerLink="/">Add</ion-button>
 </ion-content>
