--- a/src/app/pages/lists/lists.page.html
+++ b/src/app/pages/lists/lists.page.html
@@ -1,9 +1,18 @@
 <app-header titulo="Lists"></app-header>
 
-<ion-content>
-
-</ion-content>
-
+<ion-content class="ion-padding">
+  <ion-title text-capitalize> Fecha - Actividad </ion-title>
+  <br>
+  <ion-list>
+    <ion-item-sliding *ngFor="let todo of todos">
+      <ion-item lines="inset">
+        <ion-label>
+          {{ todo.Dia }} - {{todo.Actividad}} 
+        </ion-label>
+      </ion-item>
+    </ion-item-sliding>
+  </ion-list>
+  <br>
 <ion-content class="ion-text-end">
   <ion-button  shape="round" color="primary" routerLink="/">Add</ion-button>
 </ion-content>
