--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -7,7 +7,7 @@
 <ion-content >
   
     <img src="assets/img/fichasionic.png" class="center" alt="fichasionic" routerLink='/lists'> 
-    <img src="assets/img/crearfichasionic.png" class="center" alt="crearfichasionic"/>
+    <img src="assets/img/crearfichasionic.png" class="center" alt="crearfichasionic" routerLink='/create-files'/>
     <img src="assets/img/asistenciaIonic.png" class="center" alt="asistenciaIonic" routerLink='/calendar'/>
   
   
