--- a/src/app/pages/lists/lists.page.html
+++ b/src/app/pages/lists/lists.page.html
@@ -14,5 +14,5 @@
   </ion-list>
   <br>
 <ion-content class="ion-text-end">
-  <ion-button  shape="round" color="primary" routerLink="/">Add</ion-button>
+  <ion-button  shape="round" color="primary" routerLink="/create-files">Add</ion-button>
 </ion-content>
