--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar class="head">
     <ion-buttons slot="start">
       <ion-back-button text="Volver" defaultHref="/"></ion-back-button>
     </ion-buttons>
