--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,14 +1,19 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>inicio</ion-title>
+  <ion-toolbar class="header">
+    <ion-title text-capitalize>Inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content >
-  
+    <ion-item>
     <img src="assets/img/fichasionic.png" class="center" alt="fichasionic" routerLink='/lists'> 
+    </ion-item>
+    <ion-item>
     <img src="assets/img/crearfichasionic.png" class="center" alt="crearfichasionic" routerLink='/create-files'/>
+    </ion-item>
+    <ion-item>
     <img src="assets/img/asistenciaIonic.png" class="center" alt="asistenciaIonic" routerLink='/calendar'/>
+    </ion-item>
   
   
 </ion-content>
