--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <ion-header >
   <ion-toolbar class="head">
     <ion-buttons slot="start">
-      <ion-back-button text="Volver" defaultHref="/"></ion-back-button>
+      <ion-back-button text="Volver" defaultHref="/inicio"></ion-back-button>
     </ion-buttons>
     <ion-title text-capitalize>{{ titulo }}</ion-title>
   </ion-toolbar>
