--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -11,7 +11,7 @@
     >
     </ion-calendar>
   </div>
-
+  <div >
   <ion-card>
     <ion-card-header class="color">
       <ion-card-title>Cambiar informacion de asistencia</ion-card-title>
@@ -31,4 +31,5 @@
  
     </ion-card-content>
   </ion-card>
+  </div>
 </ion-content>
