--- a/src/app/pages/create-files/create-files.page.html
+++ b/src/app/pages/create-files/create-files.page.html
@@ -1,7 +1,7 @@
 <app-header titulo="Nueva Ficha"></app-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list class="ion-padding">
     <ion-item>
       <ion-label>Fecha:</ion-label>
       <ion-datetime cancelText="cancelar" doneText="aceptar" displayFormat="D MMM YYYY" [(ngModel)]="date" placeholder="Introduce la fecha" ></ion-datetime>
@@ -14,6 +14,6 @@
     </ion-item>
   </ion-list>
   <p class="ion-text-center">
-    <ion-button color="success" (click)="addFile()">Añadir ficha</ion-button>
+    <ion-button color="danger" expand="block" (click)="addFile()">Añadir ficha</ion-button>
   </p>
 </ion-content>
