--- a/src/app/pages/create-files/create-files.page.html
+++ b/src/app/pages/create-files/create-files.page.html
@@ -14,6 +14,6 @@
     </ion-item>
   </ion-list>
   <p class="ion-text-center">
-    <ion-button color="success" (click)="addFile()">Añadir ficha</ion-button>
+    <ion-button color="danger" (click)="addFile()">Añadir ficha</ion-button>
   </p>
 </ion-content>
