--- a/src/app/components/login/login.page.html
+++ b/src/app/components/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="danger">
     <ion-title>Iniciar Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,5 +14,5 @@
     <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
   </ion-item>
   <br>
-  <ion-button (click)="OnSubmitLogin()" expand="block">Entrar</ion-button>
+  <ion-button (click)="OnSubmitLogin()" expand="block" color="danger">Entrar</ion-button>
 </ion-content>
